[package]
name = "flip_accela_ids"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
accela_lib = { path = "../accela_lib" }
reqwest = { version = "0.13.4", features = ["blocking", "json", "query", "form"] }
thiserror = "2.0.18"
serde_json = "1.0.150"

